--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
 </head>
 
 <body>
+    <main>
+        <!-- Header-start -->
+        <header>
+            <nav>
+                <span>
+                    <h2>Influencer products</h2>
+                </span>
+                <span>
+                    <a href="">Home</a>
+                    <a href="">Products</a>
+                    <a href="">Sign up</a>
+                    <a href="">Log in</a>
+                    <a href=""></a>
+                    <a href=""></a>
+
+                </span>
+            </nav>
+        </header>
+        <!-- header end -->
+
+        <section class="container">
+            <div class="influencers">
+                <div class="influencer">
+                    <h1 id="influencer-title">Start your Journey as <br>
+                        Influencer</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto, in ea, facilis alias
+                        nulla</p>
+                    <button>Preebook Now</button>
+                </div>
+                <div class="camera">
+                    <img src="images/main-camera.png" alt="">
+                </div>
+            </div>
+
+        </section>
+    </main>
 
 </body>
 
