--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ceb07a8ea7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
     <title>Influencer-Gears</title>
 </head>
@@ -22,14 +23,15 @@
                     <a href="">Products</a>
                     <a href="">Sign up</a>
                     <a href="">Log in</a>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                    <a href=""><i class="fas fa-shopping-cart"></i></a>
 
                 </span>
             </nav>
         </header>
         <!-- header end -->
 
+        <!-- influencer-start -->
         <section class="container">
             <div class="influencers">
                 <div class="influencer">
@@ -37,7 +39,7 @@
                         Influencer</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto, in ea, facilis alias
                         nulla</p>
-                    <button>Preebook Now</button>
+                    <button class="color-button">Preebook Now <span><i class="fas fa-arrow-right"></i></span></button>
                 </div>
                 <div class="camera">
                     <img src="images/main-camera.png" alt="">
@@ -45,6 +47,334 @@
             </div>
 
         </section>
+        <!-- inflencer-end -->
+
+        <!-- brand log start -->
+        <section class="brand-logo">
+            <div class="logo">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </section>
+        <!-- brand logo end -->
+
+        <!-- product section start -->
+        <section class="collection-container">
+            <h2 class="common-title">popular collection</h2>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Action cam</h2>
+                        <h3>$380.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Photoshoot Set</h2>
+                        <h3>$880.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Green Background</h2>
+                        <h3>$80.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Microphone</h2>
+                        <h3>$180.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Lights Setup</h2>
+                        <h3>$1200.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Drone</h2>
+                        <h3>$980.25</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Vlogging Camera</h2>
+                        <h3>$1800.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Airbuds</h2>
+                        <h3>$100.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-banner">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="name-price">
+                        <h2>Flex Tripod</h2>
+                        <h3>$80.00</h3>
+                    </div>
+                    <div class="collection-details">
+
+                        <p>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star icon-star"></i>
+                            <i class="fas fa-star-half-alt icon-star"></i>
+                            <span class="rating"> 4.99</span>
+                        </p>
+                        <h3>
+                            Wordwide shifting <br> available <br>
+                            Buyers protection possible!
+                        </h3>
+
+                    </div>
+                </div>
+            </div>
+            <a class="see-more">See More <i class="fas fa-arrow-right"></i> </a>
+        </section>
+        <!-- product section end -->
+
+        <!-- blogger section start -->
+        <section class="bloggers-container">
+            <h2 class="common-title"> Most Popular Media Influencer in BD</h2>
+            <div class="media-blogger">
+                <div class="blogger">
+                    <div class="blogger-banner">
+                        <img src="images/ayman.jpg" alt="">
+                    </div>
+                    <div class="name-profession">
+                        <h2>Ayman Sadiq</h2>
+                        <h3>Professio: Online Teacher</h3>
+                    </div>
+                    <div class="blogger-details">
+                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum eius iusto delectus
+                            tempora assumenda autem. Accusamus ab fuga eum.</h3>
+                        <button class="color-button">More Details <span><i
+                                    class="fas fa-arrow-right"></i></span></button>
+                    </div>
+                </div>
+                <div class="blogger">
+                    <div class="blogger-banner">
+                        <img src="images/poi-poi.jpg" alt="">
+                    </div>
+                    <div class="name-profession">
+                        <h2>Solaiman shukhon</h2>
+                        <h3>Profession: Motivational Speaker</h3>
+                    </div>
+                    <div class="blogger-details">
+                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum eius iusto delectus
+                            tempora assumenda autem. Accusamus ab fuga eum.</h3>
+                        <button class="color-button">More Details <span><i
+                                    class="fas fa-arrow-right"></i></span></button>
+                    </div>
+                </div>
+                <div class="blogger">
+                    <div class="blogger-banner">
+                        <img src="images/rafsan.jpg" alt="">
+                    </div>
+                    <div class="name-profession">
+                        <h2>Rafsan The Choto Vai</h2>
+                        <h3>profession:Food blogger</h3>
+                    </div>
+                    <div class="blogger-details">
+                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum eius iusto delectus
+                            tempora assumenda autem. Accusamus ab fuga eum.</h3>
+                        <button class="color-button">More Details <span><i
+                                    class="fas fa-arrow-right"></i></span></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- blogger section end -->
+
+        <!-- footer starts -->
+
+        <footer>
+            <div class="footer">
+
+                <div class="footer-info">
+                    <h2>Influencer products</h2>
+                    <p>Copyright &copy; 2022 Influencer products <br>
+                        All rights reserved </p>
+                </div>
+
+                <div class="footer-social">
+                    <div class="social"><i class="fab fa-instagram-square"></i></div>
+                    <div class="social"><i class="fab fa-facebook"></i></div>
+                    <div class="social"><i class="fab fa-twitter"></i></div>
+                    <div class="social"><i class="fab fa-youtube"></i></div>
+                </div>
+
+
+            </div>
+
+
+        </footer>
+
+        <!-- footer ends -->
+
     </main>
 
 </body>
