--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <!-- Header-start -->
         <header>
             <nav>
-                <span>
+                <span class="header-title">
                     <h2>Influencer products</h2>
                 </span>
-                <span>
+                <span class="header-nav">
                     <a href="">Home</a>
                     <a href="">Products</a>
                     <a href="">Sign up</a>
@@ -34,14 +34,14 @@
         <!-- influencer-start -->
         <section class="container">
             <div class="influencers">
-                <div class="influencer">
+                <div class="half influencer-para">
                     <h1 id="influencer-title">Start your Journey as <br>
                         Influencer</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto, in ea, facilis alias
                         nulla</p>
                     <button class="color-button">Preebook Now <span><i class="fas fa-arrow-right"></i></span></button>
                 </div>
-                <div class="camera">
+                <div class="half camera-img">
                     <img src="images/main-camera.png" alt="">
                 </div>
             </div>
@@ -49,7 +49,7 @@
         </section>
         <!-- inflencer-end -->
 
-        <!-- brand log start -->
+        <!-- brand logo start -->
         <section class="brand-logo">
             <div class="logo">
                 <img src="logos/Alibaba.svg" alt="">
@@ -292,7 +292,9 @@
                     </div>
                 </div>
             </div>
-            <a class="see-more">See More <i class="fas fa-arrow-right"></i> </a>
+            <div class="see-more">
+                <a>See More <i class="fas fa-arrow-right"></i> </a>
+            </div>
         </section>
         <!-- product section end -->
 
