--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                     <a href="">Log in</a>
                     <a href=""><i class="fas fa-search"></i></a>
                     <a href=""><i class="fas fa-shopping-cart"></i></a>
-
                 </span>
             </nav>
         </header>
@@ -35,17 +34,18 @@
         <section class="container">
             <div class="influencers">
                 <div class="half influencer-para">
-                    <h1 id="influencer-title">Start your Journey as <br>
-                        Influencer</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto, in ea, facilis alias
-                        nulla</p>
+                    <h1 id="influencer-title"> WHO ARE OUR <br>
+                        INFLUENCERS </h1>
+                    <p>Our thousands of influencers have a highly engaged audience. They have more than just large
+                        followings, they generate action, and are influential in a wide range of interests and
+                        demographics. Our influencers screening process ensures that your campaign reaches the right
+                        audience for best results.</p>
                     <button class="color-button">Preebook Now <span><i class="fas fa-arrow-right"></i></span></button>
                 </div>
                 <div class="half camera-img">
                     <img src="images/main-camera.png" alt="">
                 </div>
             </div>
-
         </section>
         <!-- inflencer-end -->
 
@@ -308,11 +308,14 @@
                     </div>
                     <div class="name-profession">
                         <h2>Ayman Sadiq</h2>
-                        <h3>Professio: Online Teacher</h3>
+                        <h3>Profession: Online Teacher</h3>
                     </div>
                     <div class="blogger-details">
-                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum eius iusto delectus
-                            tempora assumenda autem. Accusamus ab fuga eum.</h3>
+                        <h3>Ayman Sadiq is the founder & CEO of 10 Minute School. This is the largest online education
+                            platform in Bangladesh which teaches more than 250,000 students every single day, that too
+                            completely free of cost,Ayman received The Queen’s Leader Award 2018 for creating access to
+                            quality education for millions of students in Bangladesh.
+                        </h3>
                         <button class="color-button">More Details <span><i
                                     class="fas fa-arrow-right"></i></span></button>
                     </div>
@@ -326,8 +329,11 @@
                         <h3>Profession: Motivational Speaker</h3>
                     </div>
                     <div class="blogger-details">
-                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum eius iusto delectus
-                            tempora assumenda autem. Accusamus ab fuga eum.</h3>
+                        <h3>Solaiman Shukhon is a Bangladeshi Motivational speaker, powerful orator, corporate pioneer,
+                            vlogger and correspondence strategist. Speeches by Shukhon are well known on YouTube.
+                            Shukhon propelled a large number of youth in Bangladesh by seeming in excess of 500 sessions
+                            at various colleges and seminars.
+                        </h3>
                         <button class="color-button">More Details <span><i
                                     class="fas fa-arrow-right"></i></span></button>
                     </div>
@@ -338,11 +344,14 @@
                     </div>
                     <div class="name-profession">
                         <h2>Rafsan The Choto Vai</h2>
-                        <h3>profession:Food blogger</h3>
+                        <h3>profession: Food blogger</h3>
                     </div>
                     <div class="blogger-details">
-                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum eius iusto delectus
-                            tempora assumenda autem. Accusamus ab fuga eum.</h3>
+                        <h3>Iftekhar Rafsan, known as Rafsan the Chotobhai, is a Bangladeshi YouTube personality from
+                            Dhaka, Bangladesh. He is well known for food vlogging on YouTube. He started making videos
+                            on YouTube since 2017 and currently has more than 100,000 subscribers on his YouTube
+                            channel. Other than YouTuber, he is a professional sports athlete.
+                        </h3>
                         <button class="color-button">More Details <span><i
                                     class="fas fa-arrow-right"></i></span></button>
                     </div>
@@ -355,7 +364,6 @@
 
         <footer>
             <div class="footer">
-
                 <div class="footer-info">
                     <h2>Influencer products</h2>
                     <p>Copyright &copy; 2022 Influencer products <br>
@@ -368,17 +376,11 @@
                     <div class="social"><i class="fab fa-twitter"></i></div>
                     <div class="social"><i class="fab fa-youtube"></i></div>
                 </div>
-
-
             </div>
-
-
         </footer>
 
         <!-- footer ends -->
-
     </main>
-
 </body>
 
 </html>
